src/objects/KS_Obra_Ubicacion__c.object
<CustomObject>
    <description>KAIZENSTEP. ACTIVO. Determina la ubicación de cada obra para las Organizaciones de venta intervinientes.</description>
    <fields>
        <fullName>KS_AreaF__c</fullName>
        <formula>TEXT( KS_Ubicacion__r.KS_Area__c )</formula>
        <label>Área Fórmula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Area__c</fullName>
        <label>Área</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Area</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Coordinador__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Coordinador</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ubicaciones_Obra1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_DelegacionF__c</fullName>
        <formula>TEXT( KS_Ubicacion__r.KS_Delegacion__c )</formula>
        <label>Delegación Fórmula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Delegacion__c</fullName>
        <label>Delegación</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Delegacion</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>ID Ubicación</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>KS_MarcaF__c</fullName>
        <formula>TEXT( KS_Ubicacion__r.KS_Organizacion_de_ventas__c )</formula>
        <label>Org. Ventas Fórmula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Marca__c</fullName>
        <label>Organización de ventas</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Organizacion_de_ventas</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>KS_Obra__c</fullName>
        <label>Obra</label>
        <referenceTo>KS_Obra__c</referenceTo>
        <relationshipLabel>Ubicaciones Obra</relationshipLabel>
        <relationshipName>Ubicaciones_Obra</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KS_Responsable__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Responsable</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Ubicaciones_Obra</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>KS_Ubicacion__c</fullName>
        <label>Ubicación</label>
        <referenceTo>KS_Estructura_Geografica__c</referenceTo>
        <relationshipLabel>Ubicaciones Obra</relationshipLabel>
        <relationshipName>Ubicaciones_Obra</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>KS_ZonaF__c</fullName>
        <formula>TEXT( KS_Ubicacion__r.KS_Zona__c )</formula>
        <label>Zona Fórmula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KS_Zona__c</fullName>
        <label>Zona</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>KS_Zona_Geog</valueSetName>
        </valueSet>
    </fields>
    <label>Ubicación Obra</label>
    <nameField>
        <displayFormat>UO-{0000000}</displayFormat>
        <label>ID Ubicación Obra</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ubicaciones Obra</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>